@@ -1,5 +1,5 @@
 
-R version 2.6.0 RC (2007-09-25 r42980)
+R version 2.6.0 (2007-10-03)
 Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -88,14 +88,6 @@ Loading required package: stats4
 Loading required package: coin
 Loading required package: mvtnorm
 Loading required package: zoo
-
-Attaching package: 'zoo'
-
-
-	The following object(s) are masked from package:base :
-
-	 rapply 
-
 Loading required package: sandwich
 Loading required package: strucchange
 Loading required package: vcd
@@ -305,7 +297,7 @@ attr(,"assign")
 > 
 > ### Name: cforest
 > ### Title: Random Forest
-> ### Aliases: cforest varimp
+> ### Aliases: cforest varimp proximity
 > ### Keywords: tree
 > 
 > ### ** Examples
@@ -602,7 +594,7 @@ Call: survival:::survfit(formula = resp, weights = w, subset = w >
 >     system.time(ens <- apply(bs, 2, function(w) cfit(ls, ct, weights = w, 
 +                                                      fitmem = mem)))
    user  system elapsed 
-  0.436   0.004   0.446 
+  0.436   0.008   0.443 
 > 
 > 
 > 
@@ -912,7 +904,7 @@ Linear model with coefficients:
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  52.775 0.892 107.139 0 0 
+Time elapsed:  52.571 1.212 55.278 0 0 
 > grDevices::dev.off()
 null device 
           1 
