@@ -1,5 +1,5 @@
 
-R version 2.6.0 RC (2007-09-25 r42980)
+R version 2.6.0 (2007-10-03)
 Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -24,14 +24,6 @@ Loading required package: stats4
 Loading required package: coin
 Loading required package: mvtnorm
 Loading required package: zoo
-
-Attaching package: 'zoo'
-
-
-	The following object(s) are masked from package:base :
-
-	 rapply 
-
 Loading required package: sandwich
 Loading required package: strucchange
 Loading required package: vcd
